# annoLabel

./: README.md
SmartLabel/: CMakeLists.txt  add_attribute_dialog.cpp  add_attribute_dialog.h  attribute_dialog.ui  common.cpp  config_task_window.ui  configannodialog.cpp  configannodialog.h  configannodialog.ui  custumtaskdialog.cpp  custumtaskdialog.h  custumtaskdialog.ui  defaultannodialog.cpp  defaultannodialog.h  defaultannodialog.ui  firstpagedialog.cpp  firstpagedialog.h  firstpagedialog.ui  loggin.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow_Copy.cpp  mainwindow_Copy.h  mainwindow_Copy.ui  point_dialog.cpp  point_dialog.h  point_dialog.ui  resource.qrc  taskdialog.cpp  taskdialog.h  taskdialog.ui  wegits_common.cpp  wegits_common.h
SmartLabel/annotations/: annotationitem.cpp  annotationitem.h  cubeannotationitem.cpp  cubeannotationitem.h  rectannotationitem.cpp  rectannotationitem.h  segannotationitem.cpp  segannotationitem.h
SmartLabel/canvas/: canvas2d.cpp  canvas2d.h  canvas3d.cpp  canvas3d.h  canvasbase.cpp  canvasbase.h  childcanvas3d.cpp  childcanvas3d.h
SmartLabel/controllers/: annotationcontainer.cpp  annotationcontainer.h  filemanager.cpp  filemanager.h  labelmanager.cpp  labelmanager.h
SmartLabel/ftp_util/: ftpclient.cpp  ftpclient.h
SmartLabel/widgets/: customlistwidget.cpp  customlistwidget.h  labeldialog.cpp  labeldialog.h  labeldialog.ui  labellineedit.cpp  labellineedit.h
